Projects/ChinaController/CPPWrapper/Wrap.h

typedef struct  
{
	char szDevType[DH_DEV_TYPE_LEN];
	char szSoftWareVersion[DH_MAX_URL_LEN];
	DWORD dwSoftwareBuildDate_Year;
	DWORD dwSoftwareBuildDate_Month;
	DWORD dwSoftwareBuildDate_Day;
} WRAP_DevConfig_TypeAndSoftInfo_Result;
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_GetSoftwareInfo(int loginID, WRAP_DevConfig_TypeAndSoftInfo_Result* result);
typedef struct  
{
	char szIP[MAX_ADDRESS_LEN];
	char szSubnetMask[MAX_ADDRESS_LEN];
	char szDefGateway[MAX_ADDRESS_LEN];
	int	nMTU;
} WRAP_CFG_NETWORK_INFO_Result;
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_Get_NetInfo(int loginID, WRAP_CFG_NETWORK_INFO_Result* result);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_Set_NetInfo(int loginID, char* ip, char* mask, char* gate, int mtu);
typedef struct
{
	char szMAC[DH_MACADDR_LEN];
} WRAP_DevConfig_MAC_Result;
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_GetMacAddress(int loginID, WRAP_DevConfig_MAC_Result* result);
typedef struct
{
	int nMaxPageSize;
} WRAP_DevConfig_RecordFinderCaps_Result;
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_GetMaxPageSize(int loginID, WRAP_DevConfig_RecordFinderCaps_Result* result);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_GetCurrentTime(int loginID, NET_TIME* result);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_SetCurrentTime(int loginID, int dwYear, int dwMonth, int dwDay, int dwHour, int dwMinute, int dwSecond);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_GetDoorConfiguration(int loginID, int channelNo, CFG_ACCESS_EVENT_INFO* result);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_SetDoorConfiguration(int loginID, int channelNo, CFG_ACCESS_EVENT_INFO* stuGeneralInfo);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_ReBoot(int loginID);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_DeleteCfgFile(int loginID);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_OpenDoor(int loginID, int channelNo);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_CloseDoor(int loginID, int channelNo);
extern "C" SDK_CLIENT_API int SDK_CALL_METHOD WRAP_GetDoorStatus(int loginID, int channelNo);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_Upgrade(int loginID, char fileName[256]);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD TestStruct(CFG_ACCESS_EVENT_INFO* result);
extern "C" SDK_CLIENT_API int SDK_CALL_METHOD WRAP_GetAllCount(int finderID);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_EndGetAll(int finderID);