Projects/ControllerSDK/SDK_DLL/EventAttach/dhnetsdk.h

/////////////////////////////////日志相关/////////////////////////////////

// 日志查询类型
typedef enum _DH_LOG_QUERY_TYPE
{
	DHLOG_ALL = 0,								// 所有日志
	DHLOG_SYSTEM,								// 系统日志
	DHLOG_CONFIG,								// 配置日志
	DHLOG_STORAGE,								// 存储相关
	DHLOG_ALARM,								// 报警日志
	DHLOG_RECORD,								// 录象相关
	DHLOG_ACCOUNT,								// 帐号相关
	DHLOG_CLEAR,								// 清除日志
	DHLOG_PLAYBACK,								// 回放相关
	DHLOG_MANAGER                               // 前端管理运行相关
} DH_LOG_QUERY_TYPE;
// 时间
typedef struct 
{
	DWORD				dwYear;					// 年
	DWORD				dwMonth;				// 月
	DWORD				dwDay;					// 日
	DWORD				dwHour;					// 时
	DWORD				dwMinute;				// 分
	DWORD				dwSecond;				// 秒
} NET_TIME,*LPNET_TIME;
// 日志信息里的时间定义
typedef struct _DHDEVTIME
{
	DWORD				second		:6;			// 秒	1-60		
	DWORD				minute		:6;			// 分	1-60		
	DWORD				hour		:5;			// 时	1-24		
	DWORD				day			:5;			// 日	1-31		
	DWORD				month		:4;			// 月	1-12		
	DWORD				year		:6;			// 年	2000-2063	
} DHDEVTIME, *LPDHDEVTIME;
// 卡状态
typedef enum tagNET_ACCESSCTLCARD_STATE
{
	NET_ACCESSCTLCARD_STATE_UNKNOWN = -1,
	NET_ACCESSCTLCARD_STATE_NORMAL = 0,             // 正常
	NET_ACCESSCTLCARD_STATE_LOSE   = 0x01,			// 挂失
	NET_ACCESSCTLCARD_STATE_LOGOFF = 0x02,			// 注销
	NET_ACCESSCTLCARD_STATE_FREEZE = 0x04,			// 冻结
}NET_ACCESSCTLCARD_STATE;
// 卡类型
typedef enum tagNET_ACCESSCTLCARD_TYPE
{
	NET_ACCESSCTLCARD_TYPE_UNKNOWN = -1,
	NET_ACCESSCTLCARD_TYPE_GENERAL, 			// 一般卡
	NET_ACCESSCTLCARD_TYPE_VIP,				    // VIP卡
	NET_ACCESSCTLCARD_TYPE_GUEST,				// 来宾卡
	NET_ACCESSCTLCARD_TYPE_PATROL,				// 巡逻卡
	NET_ACCESSCTLCARD_TYPE_BLACKLIST,			// 黑名单卡
	NET_ACCESSCTLCARD_TYPE_CORCE,				// 胁迫卡
	NET_ACCESSCTLCARD_TYPE_MOTHERCARD = 0xff,	// 母卡
}NET_ACCESSCTLCARD_TYPE;
// 门禁卡记录集信息
typedef struct tagNET_RECORDSET_ACCESS_CTL_CARD
{
	DWORD		dwSize;
	int			nRecNo;								// 记录集编号，只读
	NET_TIME	stuCreateTime;						// 创建时间
	char        szCardNo[DH_MAX_CARDNO_LEN];		// 卡号
	char        szUserID[DH_MAX_USERID_LEN];		// 用户ID
	NET_ACCESSCTLCARD_STATE		emStatus;			// 卡状态
	NET_ACCESSCTLCARD_TYPE		emType;				// 卡类型
	char		szPsw[DH_MAX_CARDPWD_LEN];			// 卡密码
	int			nDoorNum;							// 有效的门数目;
	int		    sznDoors[DH_MAX_DOOR_NUM];			// 有权限的门序号，即CFG_CMD_ACCESS_EVENT配置的数组下标
	int			nTimeSectionNum;					// 有效的的开门时间段数目
	int		    sznTimeSectionNo[DH_MAX_TIMESECTION_NUM];		// 开门时间段索引，即CFG_ACCESS_TIMESCHEDULE_INFO的数组下标
	int			nUserTime;							// 使用次数
	NET_TIME	stuValidStartTime;					// 开始有效期
	NET_TIME	stuValidEndTime;					// 结束有效期
	BOOL        bIsValid;							// 是否有效,true有效;false无效
}NET_RECORDSET_ACCESS_CTL_CARD;
// 门禁密码记录集信息
typedef struct tagNET_RECORDSET_ACCESS_CTL_PWD 
{
	DWORD		dwSize;
	int			nRecNo;							// 记录集编号，只读
	NET_TIME	stuCreateTime;					// 创建时间
	char        szUserID[DH_MAX_USERID_LEN];    // 用户ID
	char		szDoorOpenPwd[DH_MAX_CARDPWD_LEN];// 开门密码
	char		szAlarmPwd[DH_MAX_CARDPWD_LEN];	// 报警密码
	int			nDoorNum;					    // 有效的的门数目
	int		    sznDoors[DH_MAX_DOOR_NUM];		// 有权限的门序号，即CFG_CMD_ACCESS_EVENT配置CFG_ACCESS_EVENT_INFO的数组下标
}NET_RECORDSET_ACCESS_CTL_PWD;
typedef struct _QUERY_DEVICE_LOG_PARAM
{
	DH_LOG_QUERY_TYPE	emLogType;				// 查询日志类型
	NET_TIME			stuStartTime;			// 查询日志的开始时间
	NET_TIME			stuEndTime;				// 查询日志的结束时间
	int					nStartNum;				// 在时间段中从第几条日志开始查询，开始第一次查询可设为0
	int					nEndNum;				// 一次查询中到第几条日志结束,日志返回条数的最大值为1024
	BYTE                nLogStuType;            // 日志数据结构体类型,0:表示DH_DEVICE_LOG_ITEM；1:表示DH_DEVICE_LOG_ITEM_EX
	BYTE                reserved[3];            // 保留 对齐
	unsigned int        nChannelID;             // 通道号,0:兼容之前表示所有通道号，所以通道号从1开始; 1:第一个通道
	BYTE				bReserved[40];
} QUERY_DEVICE_LOG_PARAM;